@@ -1,1 +1,1 @@
-0.4-beta2-svn
+0.5-svn
