@@ -1,5 +1,10 @@
 2008-10-13:
-* Added: actoin "Normal size" for text zoom
+* Added: selection of EOL mode (Win/Unix/Mac)
+
+=== Branch 0.4 splitted ===
+
+2008-10-13:
+* Added: action "Normal size" for text zoom
 * Fixed: now we have current file's directory at 'Save as' dialog
 * Fixed: bug with repeated replacements if replacing text 
   contains the replaceable one as a substring
